proyecto-1-kubernetes/Kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-platform
  namespace: default
spec:
  selector:
    app: devops-platform
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
