proyecto-1-kubernetes/Kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-platform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-platform
            port:
              number: 80
